# coin

./: .gitignore  Jenkinsfile  README.md
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
coin-api/: .dockerignore  Dockerfile  Jenkinsfile  README.md  corp-migration.md  go.mod  go.sum  helm-chart-requirements.md  manifest.schema.json
coin-branching-models/: README.md
coin-cli/: Jenkinsfile  README.md  go.mod  go.sum  main.go
coin-executor/: .dockerignore  CHARTER.md  Dockerfile.agent  Jenkinsfile  README.md  buildkitd.toml  corp-migration.md  go.mod  go.sum  podman-containers.conf  podman-registries.conf  podman-storage.conf
coin-golden-paths/: README.md  catalog.yaml
coin-gp-content/: Jenkinsfile  README.md
coin-images/: Makefile
coin-jenkins-agents/: Jenkinsfile  README.md  catalog.yaml  platform.yaml
coin-lib/: Jenkinsfile  README.md
coin-platform/: README.md  platform.yaml
coin-starters/: Jenkinsfile.coin  README.md  coinPipeline.groovy
coin-starters/python-uv-app/: pyproject.toml
coin-starters/python-uv-app/.coin/: config.yaml
coin-ui/: .dockerignore  Dockerfile  Jenkinsfile  Makefile  README.md  corp-migration.md  helm-chart-requirements.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dev-stand-base/: .env  Makefile  compose.yaml
dev-stand-coin/: Makefile  compose.yml
docker/: .coin-executor-sync.sha256  .coin-jenkins-agents-sync.sha256  .env.example  Makefile  PodTemplate.local.groovy  README.md  compose.yml  images-local.yaml  samples.yaml
docs/: README.md  agent-build-model.md  (+14 more)
(+939 files in other folders)
