[project]
name = "my-service"
version = "0.1.0"
description = "Example service for Coin CI python-uv template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
